fix text overflowing into other columns

--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,14 @@
 
 .grid-item {
   padding: 10px;
+  min-width: 0;
 }
 
 div h2 {
   text-align: center;
+  font-family: arial, sans-serif;
   font-size: 15px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
